# cpped

./: .gitignore  CMakeLists.txt  README.md
annotate_source/: annotate_source.cc
backend_lib/: CMakeLists.txt  backend.cc  backend.hh  background_worker.cc  background_worker.hh  background_worker_manager.cc  background_worker_manager.hh  background_worker_messages.hh  buffered_writer.hh  compilation_unit.cc  compilation_unit.hh  completion.cc  completion.hh  cpp_tokens.cc  cpp_tokens.hh  endpoint.cc  endpoint.hh  event_dispatcher.cc  event_dispatcher.hh  log.cc  log.hh  messages.hh  open_file.cc  open_file.hh  project.cc  project.hh  project_connector.cc  project_connector.hh  serialize.hh  socket_reader.hh  socket_writer.cc  socket_writer.hh  type_dispatcher.hh
backend_lib/tests/: CMakeLists.txt  cppparser_tests.cc  main.cc
clang_lib/: CMakeLists.txt  clang.cc  clang.hh  clang_flags.cc  clang_flags.hh  flags.cc  flags.hh  utils.cc  utils.hh
cpped/: CMakeLists.txt  clang_flags.cc  clang_flags.hh  clipboard.cc  clipboard.hh  command_context.cc  command_context.hh  command_widget.cc  command_widget.hh  commands.cc  commands.hh  completer.cc  completer.hh  completer_widget.cc  completer_widget.hh  document.cc  document.hh  edited_file.cc  edited_file.hh  editor.cc  editor.hh  editor_state.hh  editor_window.cc  editor_window.hh  event_loop.cc  event_loop.hh  event_window.cc  file_command.cc  file_command.hh  filesystem_widget.cc  filesystem_widget.hh  goto_command.cc  goto_command.hh  main.cc  main_window.cc  main_window.hh  navigator_widget.cc  navigator_widget.hh  ncurses_env.cc  ncurses_env.hh  (+10 more)
doc/: Diary.md  Manifest.md
document_lib/: CMakeLists.txt  clang.cc  clang.hh  cpp_parser.cc  cpp_parser.hh  document.cc  document.hh  document_data.cc  document_data.hh  iparser.hh  line_data.cc  line_data.hh  line_token.cc  line_token.hh
document_lib/details/: document_data.cc  document_data.hh
document_lib/tests/: CMakeLists.txt  cppparser_tests.cc  document_tests.cc  main.cc
ipc_lib/: CMakeLists.txt  buffered_writer.hh  endpoint.cc  endpoint.hh  serialize.hh  socket_reader.hh  socket_writer.cc  socket_writer.hh  subprocess.cc  subprocess.hh  type_dispatcher.hh
libclang++/: CMakeLists.txt  sourceLocation.cxx
nct/: CMakeLists.txt  event_dispatcher.cc  event_dispatcher.hh  event_window.cc  event_window.hh  fbuttons.cc  fbuttons.hh  line_edit.cc  line_edit.hh  list_widget.cc  list_widget.hh  ncurses_env.cc  ncurses_env.hh  ncurses_inc.hh  ncurses_window.cc  ncurses_window.hh  splitter.cc  splitter.hh  status_message.cc  status_message.hh  style.cc  style.hh  types.hh  window_manager.cc  window_manager.hh
ncurses_toolkit_lib/: CMakeLists.txt  event_dispatcher.cc  event_dispatcher.hh  event_window.hh  ncurses_window.cc  ncurses_window.hh
parser/: CMakeLists.txt  README.md  main.cc
test_programs/: CMakeLists.txt  README.md
test_programs/annotate_source/: CMakeLists.txt  README.md  annotate_source.cc
test_programs/completer/: CMakeLists.txt  README.md  completer.cc
test_programs/crashinvestigation/: CMakeLists.txt  crash.cc
test_programs/parser/: CMakeLists.txt  main.cc
utils_lib/: CMakeLists.txt  event_loop.cc  event_loop.hh  log.cc  log.hh
